--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,61 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default Suite</th></tr>
-<tr><td><a href="#t0">SC_Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">115 031</td><td></td><td></td></tr>
+<tr><td><a href="#t0">SC_Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">92,779</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">SC_Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">RUN_ALL.LADP_POM_TMONS</td><td><a href="#m0">LADP_FireTmons</a></td><td rowspan="1">1696503809579</td><td rowspan="1">21030</td></tr><tr class="failedodd"><td rowspan="1">RUN_ALL.RAIM_POM_TMONS</td><td><a href="#m1">Raim_Fire_TMON</a></td><td rowspan="1">1696503877505</td><td rowspan="1">14458</td></tr><tr><th colspan="4">SC_Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">RUN_ALL.LADP_POM_TMONS</td><td><a href="#m2">LADP_EdgeTmons</a></td><td rowspan="1">1696503830893</td><td rowspan="1">28520</td></tr><tr class="passedeven"><td><a href="#m3">LADP_chromeTmons</a></td><td rowspan="1">1696503859423</td><td rowspan="1">18072</td></tr><tr class="passedodd"><td rowspan="2">RUN_ALL.RAIM_POM_TMONS</td><td><a href="#m4">Raim_Crome_TMON</a></td><td rowspan="1">1696503891970</td><td rowspan="1">13519</td></tr><tr class="passedodd"><td><a href="#m5">Raim_Edge_TMON</a></td><td rowspan="1">1696503905494</td><td rowspan="1">18972</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">SC_Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">RUN_ALL.LADP_POM_TMONS</td><td><a href="#m0">LADP_EdgeTmons</a></td><td rowspan="1">1696518207662</td><td rowspan="1">25132</td></tr><tr class="passedeven"><td><a href="#m1">LADP_FireTmons</a></td><td rowspan="1">1696518165444</td><td rowspan="1">41881</td></tr><tr class="passedeven"><td><a href="#m2">LADP_chromeTmons</a></td><td rowspan="1">1696518232826</td><td rowspan="1">25188</td></tr></tbody>
 </table>
-<h2>SC_Test</h2><h3 id="m0">RUN_ALL.LADP_POM_TMONS#LADP_FireTmons</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Firefox ir palaists</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.WebDriverException: Failed to decode response from marionette
-Build info: version: &apos;4.11.0&apos;, revision: &apos;040bc5406b&apos;
-System info: os.name: &apos;Windows Server 2019&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;20.0.2&apos;
-Driver info: org.openqa.selenium.firefox.FirefoxDriver
-Command: [c64eee0a-7cab-4b4f-94e9-ddcdd1a20c4d, get {url=https://data.gov.lv/lv}]
-Capabilities {acceptInsecureCerts: true, browserName: firefox, browserVersion: 118.0.1, moz:accessibilityChecks: false, moz:buildID: 20230927232528, moz:debuggerAddress: 127.0.0.1:20328, moz:geckodriverVersion: 0.33.0, moz:headless: false, moz:platformVersion: 10.0, moz:processID: 43304, moz:profile: C:\Users\PETERI~1.TRO\AppDa..., moz:shutdownTimeout: 60000, moz:webdriverClick: true, moz:windowless: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://127.0.0.1:20328/devtoo..., se:cdpVersion: 85.0, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify}
-Session ID: c64eee0a-7cab-4b4f-94e9-ddcdd1a20c4d
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:52)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:191)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:196)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:171)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:518)
-	at org.openqa.selenium.remote.RemoteWebDriver.get(RemoteWebDriver.java:300)
-	at pages.LADP_homeLapa.atvertLADPlapa(LADP_homeLapa.java:35)
-	at RUN_ALL.LADP_POM_TMONS.LADP_FireTmons(LADP_POM_TMONS.java:29)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:66)
-	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:105)
-... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">RUN_ALL.RAIM_POM_TMONS#Raim_Fire_TMON</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.SessionNotCreatedException: Could not start a new session. Response code 500. Message: Failed to decode response from marionette 
-Host info: host: &apos;JUMP3&apos;, ip: &apos;10.56.180.13&apos;
-Build info: version: &apos;4.11.0&apos;, revision: &apos;040bc5406b&apos;
-System info: os.name: &apos;Windows Server 2019&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;20.0.2&apos;
-Driver info: org.openqa.selenium.firefox.FirefoxDriver
-Command: [null, newSession {capabilities=[Capabilities {acceptInsecureCerts: true, browserName: firefox, moz:debuggerAddress: true, moz:firefoxOptions: {binary: C:\Program Files\Mozilla Fi...}}]}]
-	at org.openqa.selenium.remote.ProtocolHandshake.createSession(ProtocolHandshake.java:140)
-	at org.openqa.selenium.remote.ProtocolHandshake.createSession(ProtocolHandshake.java:96)
-	at org.openqa.selenium.remote.ProtocolHandshake.createSession(ProtocolHandshake.java:68)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:163)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:196)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:171)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:518)
-	at org.openqa.selenium.remote.RemoteWebDriver.startSession(RemoteWebDriver.java:232)
-	at org.openqa.selenium.remote.RemoteWebDriver.&lt;init&gt;(RemoteWebDriver.java:159)
-	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:156)
-	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:151)
-	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:132)
-	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:127)
-	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:112)
-	at org.openqa.selenium.firefox.FirefoxDriver.&lt;init&gt;(FirefoxDriver.java:102)
-	at Helper.DriverCommon.startDriverFirefox(DriverCommon.java:22)
-	at RUN_ALL.RAIM_POM_TMONS.Raim_Fire_TMON(RAIM_POM_TMONS.java:29)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:66)
-	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:105)
-... Removed 22 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">RUN_ALL.LADP_POM_TMONS#LADP_EdgeTmons</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Edge ir palaists<br/>1. Chrome LADP lapa ir atvērta<br/>2. Atrod meklēšanas lauku<br/>3. Ievada vakances<br/>4. Spiež meklēt<br/>5. Pauze 5 sec<br/>6. Spiež pirmo rezultātu/vakances<br/>7. Spiež uz pirmo resursu<br/>8. Aiziet uz datumu kad pēdējo reizi mainīts<br/>9. Spiež breadcrumb home<br/>10. Pauze 5 sek<br/>11. Meklē Izsludinātie iepirkumi (e-konkursi)<br/>12. Spiež meklēt<br/>13. Pauze 5 sek<br/>14. Spiež uz pirmā rezultāta<br/>15. Pauze 5 sek<br/>16. Spiež uz 2023 datiem<br/>17. Aiziet uz datumu kad pēdējo reizi mainīts<br/>18. Spiež Datu API<br/>19. Pauze 2 sek<br/> Lapa ir aizvērta</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">RUN_ALL.LADP_POM_TMONS#LADP_chromeTmons</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Chrome ir palaists<br/>1. Chrome LADP lapa ir atvērta<br/>2. Atrod meklēšanas lauku<br/>3. Ievada vakances<br/>4. Spiež meklēt<br/>5. Pauze 5 sec<br/>6. Spiež pirmo rezultātu/vakances<br/>7. Spiež uz pirmo resursu<br/>8. Aiziet uz datumu kad pēdējo reizi mainīts<br/>9. Spiež breadcrumb home<br/>10. Pauze 5 sek<br/>11. Meklē Izsludinātie iepirkumi (e-konkursi)<br/>12. Spiež meklēt<br/>13. Pauze 5 sek<br/>14. Spiež uz pirmā rezultāta<br/>15. Pauze 5 sek<br/>16. Spiež uz 2023 datiem<br/>17. Aiziet uz datumu kad pēdējo reizi mainīts<br/>18. Spiež Datu API<br/>19. Pauze 2 sek<br/> Lapa ir aizvērta</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">RUN_ALL.RAIM_POM_TMONS#Raim_Crome_TMON</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Chrome ir palaists<br/>1. Chrome RAIM lapa ir atvērta<br/>2. Sīkdatnes apstiprinātas <br/>3. Izvēlas Iedzīvotāju skaits (PMLP)<br/>4. Atver /list<br/>5. Spiež lejuplādēt <br/>6. Pauze 5 sec<br/>7. Spiež atlasīt<br/>8. Atver /thematic-analysis<br/>9. Spiež Par ES fondu...<br/>10. Pauze 3 sec<br/> Lapa ir aizvērta</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">RUN_ALL.RAIM_POM_TMONS#Raim_Edge_TMON</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Edge ir palaists<br/>1. Chrome RAIM lapa ir atvērta<br/>2. Sīkdatnes apstiprinātas <br/>3. Izvēlas Iedzīvotāju skaits (PMLP)<br/>4. Atver /list<br/>5. Spiež lejuplādēt <br/>6. Pauze 5 sec<br/>7. Spiež atlasīt<br/>8. Atver /thematic-analysis<br/>9. Spiež Par ES fondu...<br/>10. Pauze 3 sec<br/> Lapa ir aizvērta</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>SC_Test</h2><h3 id="m0">RUN_ALL.LADP_POM_TMONS#LADP_EdgeTmons</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Edge ir palaists<br/>1. Chrome LADP lapa ir atvērta<br/>2. Atrod meklēšanas lauku<br/>3. Ievada vakances<br/>4. Spiež meklēt<br/>5. Pauze 5 sec<br/>6. Spiež pirmo rezultātu/vakances<br/>7. Spiež uz pirmo resursu<br/>8. Aiziet uz datumu kad pēdējo reizi mainīts<br/>9. Spiež breadcrumb home<br/>10. Pauze 5 sek<br/>11. Meklē Izsludinātie iepirkumi (e-konkursi)<br/>12. Spiež meklēt<br/>13. Pauze 5 sek<br/>14. Spiež uz pirmā rezultāta<br/>15. Pauze 5 sek<br/>16. Spiež uz 2023 datiem<br/>17. Aiziet uz datumu kad pēdējo reizi mainīts<br/>18. Spiež Datu API<br/>19. Pauze 2 sek<br/> Lapa ir aizvērta</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">RUN_ALL.LADP_POM_TMONS#LADP_FireTmons</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Firefox ir palaists<br/>1. Chrome LADP lapa ir atvērta<br/>2. Atrod meklēšanas lauku<br/>3. Ievada vakances<br/>4. Spiež meklēt<br/>5. Pauze 5 sec<br/>6. Spiež pirmo rezultātu/vakances<br/>7. Spiež uz pirmo resursu<br/>8. Aiziet uz datumu kad pēdējo reizi mainīts<br/>9. Spiež breadcrumb home<br/>10. Pauze 5 sek<br/>11. Meklē Izsludinātie iepirkumi (e-konkursi)<br/>12. Spiež meklēt<br/>13. Pauze 5 sek<br/>14. Spiež uz pirmā rezultāta<br/>15. Pauze 5 sek<br/>16. Spiež uz 2023 datiem<br/>17. Aiziet uz datumu kad pēdējo reizi mainīts<br/>18. Spiež Datu API<br/>19. Pauze 2 sek<br/> Lapa ir aizvērta</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">RUN_ALL.LADP_POM_TMONS#LADP_chromeTmons</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Chrome ir palaists<br/>1. Chrome LADP lapa ir atvērta<br/>2. Atrod meklēšanas lauku<br/>3. Ievada vakances<br/>4. Spiež meklēt<br/>5. Pauze 5 sec<br/>6. Spiež pirmo rezultātu/vakances<br/>7. Spiež uz pirmo resursu<br/>8. Aiziet uz datumu kad pēdējo reizi mainīts<br/>9. Spiež breadcrumb home<br/>10. Pauze 5 sek<br/>11. Meklē Izsludinātie iepirkumi (e-konkursi)<br/>12. Spiež meklēt<br/>13. Pauze 5 sek<br/>14. Spiež uz pirmā rezultāta<br/>15. Pauze 5 sek<br/>16. Spiež uz 2023 datiem<br/>17. Aiziet uz datumu kad pēdējo reizi mainīts<br/>18. Spiež Datu API<br/>19. Pauze 2 sek<br/> Lapa ir aizvērta</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
