--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_Suite" class="navigator-link ">
-                    <span>C:\Users\peteris.troksa\AppData\Local\JetBrains\IdeaIC2023.1\temp-testng-customsuite.xml</span>
+                    <span>C:\Users\PC\AppData\Local\JetBrains\IdeaIC2023.2\temp-testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -160,18 +160,18 @@
         </div> <!-- panel Default_Suite -->
         <div panel-name="test-xml-Default_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\peteris.troksa\AppData\Local\JetBrains\IdeaIC2023.1\temp-testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PC\AppData\Local\JetBrains\IdeaIC2023.2\temp-testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Default Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;SC_Test21&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;SC_Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;RUN_ALL.TVP_PamatlietasPOM&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- SC_Test21 --&gt;
+  &lt;/test&gt; &lt;!-- SC_Test --&gt;
 &lt;/suite&gt; &lt;!-- Default Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -183,7 +183,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">SC_Test21 (1 class)</span>
+                <span class="test-name">SC_Test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -213,20 +213,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'TVP_pamatlietasFire')
 data.setCell(0, 2, 'RUN_ALL.TVP_PamatlietasPOM')
-data.setCell(0, 3, 30904);
+data.setCell(0, 3, 89863);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'TVP_pamatlietasChrome')
 data.setCell(1, 2, 'RUN_ALL.TVP_PamatlietasPOM')
-data.setCell(1, 3, 30555);
+data.setCell(1, 3, 57823);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'TVP_pamatlietasEdge')
 data.setCell(2, 2, 'RUN_ALL.TVP_PamatlietasPOM')
-data.setCell(2, 3, 27541);
+data.setCell(2, 3, 53645);
 window.suiteTableData['Default_Suite']= { tableData: data, tableDiv: 'times-div-Default_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 3 minutes</span>
               <div id="times-div-Default_Suite">
               </div> <!-- times-div-Default_Suite -->
             </div> <!-- times-div -->
@@ -238,9 +238,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">TVP_pamatlietasEdge</span>
+              <span class="reporter-method-name">TVP_pamatlietasFire</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Edge ir palaists</span>
+                <span class="reporter-method-output">Firefox ir palaists</span>
                 <span class="reporter-method-output">1. VRAA lapa ir atvērta</span>
                 <span class="reporter-method-output">2. VRAA lapa ir apstiprinātas sīkdatnes</span>
                 <span class="reporter-method-output">3. Izvēlētas aktualitātes</span>
@@ -265,9 +265,9 @@ Direktors</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
-              <span class="reporter-method-name">TVP_pamatlietasFire</span>
+              <span class="reporter-method-name">TVP_pamatlietasEdge</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Firefox ir palaists</span>
+                <span class="reporter-method-output">Edge ir palaists</span>
                 <span class="reporter-method-output">1. VRAA lapa ir atvērta</span>
                 <span class="reporter-method-output">2. VRAA lapa ir apstiprinātas sīkdatnes</span>
                 <span class="reporter-method-output">3. Izvēlētas aktualitātes</span>
@@ -340,11 +340,11 @@ Direktors</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TVP_pamatlietasEdge</span>
-                <span class="method-start">30808 ms</span>
+                <span class="method-start">58401 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TVP_pamatlietasFire</span>
-                <span class="method-start">58356 ms</span>
+                <span class="method-start">112061 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
